# Solitude

./: .gitmodules  AG-SLAM.md  CMakeLists.txt  README.md  package.xml
Code/3D-Detection/MV3D/: .gitignore  environment_cpu.yml  make.sh
Code/3D-Detection/MV3D/src/: a.out  config.py  data.py  mv3d.py  raw_data.py
Code/3D-Detection/PointNet++/: test_classification.py  train_semseg.py
Code/3D-Detection/PointNet++/data_utils/: indoor3d_util.py
Code/3D-Detection/PointNet/pointnet/: model.py
Code/3D-Detection/PointNet/utils/: train_classification.py
Code/3D-Detection/SECOND/: README.md
Code/3D-Detection/VoxelNet/: config.py
Code/3D-Detection/VoxelNet/model/: rpn.py
Code/3D-Detection/VoxelNet/preproc/: crop.py  split.py
Code/3D-Detection/VoxelNet/utils/: box_overlaps.c  preprocess.py  utils.py
Code/3D-Detection/se-ssd/spconv/: setup.py
Code/4D-reconstruction/: README.md
Code/Place-Recognition/: README.md  main.py  test.py  train.py
Code/Place-Recognition/.ipynb_checkpoints/: NetVLAD-checkpoint.ipynb
Code/Place-Recognition/loopdetection/: CMakeLists.txt  LoopClosure.h  NetVLAD.h  QueryResults.cpp  QueryResults.h  Timer.h  main.cpp  netvlad.cpp  netvlad.h
Code/Place-Recognition/netvlad/: main.py
Code/Place-Recognition/notebook/: NetVLAD.ipynb
Code/Place-Recognition/notebook/.ipynb_checkpoints/: NetVLAD-checkpoint.ipynb
Code/Quadric-Data-Association/: CMakeLists.txt
Code/Quadric-Data-Association/examples/c++/: CMakeLists.txt
Code/Quadric-Data-Association/examples/yolo-test/: CMakeLists.txt  README.md  main.cpp
Code/Quadric-Data-Association/gtsam_quadrics/geometry/: BoundingBoxFactor.cpp  DualConic.cpp  QuadricAngleFactor.cpp
Code/Quadric-Data-Association/gtsam_quadrics/models/: yolo.cpp  yolo.h
Code/SLAM/: CMakeLists.txt  Dependencies.md  Note.md  README.md  build.sh
Code/SLAM/Examples/Monocular/: mono_euroc.cpp  mono_kitti.cpp  mono_tum.cpp
Code/SLAM/Examples/ROS/ORB_VIO/: CMakeLists.txt
Code/SLAM/Examples/Stereo/: stereo_kitti.cpp
Code/SLAM/Examples/VIO/: CMakeLists.txt  EuRoC-mono.yaml  EuRoC.yaml  vio-mono.cpp  vio-stereo.cpp
Code/SLAM/include/kms_slam/common/: Configparam.h  Converter.h  IMUdata.h  Transformation.h  Types.h  g2otypes.h
Code/SLAM/include/kms_slam/feature/: ORBVocabulary.h  ORBextractor.h  ORBmatcher.h
Code/SLAM/include/kms_slam/geometry/: Frame.h  KeyFrame.h  KeyFrameDatabase.h  Map.h  MapPoint.h  NavState.h
Code/SLAM/include/kms_slam/gtsam/: GraphManager.h  IMUManager.h  SmartFactors.h
Code/SLAM/include/kms_slam/imu/: IMUCalibration.h  IMUPreintegrator.h  IMUdata.h  NavState.h  g2otypes.h  so3.h
Code/SLAM/include/kms_slam/optimizer/: IMUPreintegrator.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  so3.h
Code/SLAM/include/kms_slam/system/: Initializer.h  LocalMapping.h  LoopClosing.h  System.h  Tracking.h
Code/SLAM/include/kms_slam/visualizer/: FrameDrawer.h  MapDrawer.h  Viewer.h
Code/SLAM/pyplotscripts/: plotinit.py  plotnavstate.py
Code/SLAM/src/: CMakeLists.txt
Code/SLAM/src/common/: Configparam.cpp  Converter.cpp  IMUdata.cpp  g2otypes.cpp
Code/SLAM/src/feature/: ORBextractor.cpp  ORBmatcher.cpp
Code/SLAM/src/geometry/: Frame.cpp  KeyFrame.cpp  KeyFrameDatabase.cpp  Map.cpp  MapPoint.cpp  NavState.cpp
Code/SLAM/src/gtsam/: GraphManager.cpp  IMUManager.cpp
Code/SLAM/src/imu/: IMUPreintegrator.cpp  IMUdata.cpp  NavState.cpp  g2otypes.cpp  so3.cpp
Code/SLAM/src/optimizer/: IMUPreintegrator.cpp  Optimizer.cpp  PnPsolver.cpp  Sim3Solver.cpp  so3.cpp
Code/SLAM/src/system/: Initializer.cpp  LocalMapping.cpp  LoopClosing.cpp  System.cpp  Tracking.cpp
Code/SLAM/src/visualizer/: FrameDrawer.cpp  MapDrawer.cpp  Viewer.cpp
Code/SLAM/tools/: bin_vocabulary.cc
Code/SemanticSLAM/: CMakeLists.txt
Code/VIO/: README.md  ReadMe.md
Code/VIO/ov_core/: CMakeLists.txt
Code/gtsam-vio/include/gtsam_vio/: cam_state.h
Code/gtsam_fusion/config/: rviz_config.rviz
Test/NetVLAD-Example-on-Colab/: NetVLAD_manual.ipynb
Test/NetVLAD-Example-on-Colab/.ipynb_checkpoints/: NetVLAD_manual-checkpoint.ipynb
Test/SLAM/: Note.md  README.md
Test/SemanticSLAM/: CMakeLists.txt
Test/quadric_slam-deprecated/object_slam/data/: trajectories35.txt
Theory/ISAM2 Presentation/docProps/: app.xml  core.xml
Theory/ISAM2 Presentation/ppt/: presProps.xml  presentation.xml  viewProps.xml
Theory/ISAM2 Presentation/ppt/media/: hdphoto3.wdp
Theory/ISAM2 Presentation/ppt/notesMasters/: notesMaster1.xml
Theory/ISAM2 Presentation/ppt/notesSlides/: notesSlide3.xml  notesSlide5.xml  notesSlide7.xml  notesSlide8.xml  notesSlide9.xml
Theory/ISAM2 Presentation/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout5.xml
Theory/ISAM2 Presentation/ppt/slideMasters/: slideMaster1.xml
Theory/ISAM2 Presentation/ppt/slides/: slide1.xml  slide17.xml  slide18.xml  slide20.xml  slide21.xml  slide22.xml  slide24.xml  slide25.xml  slide27.xml  slide28.xml  slide3.xml  slide31.xml  slide37.xml  slide38.xml  slide4.xml  slide44.xml
code/ISAM2 Presentation/: [Content_Types].xml
code/ISAM2 Presentation/ppt/_rels/: presentation.xml.rels
code/ISAM2 Presentation/ppt/notesSlides/: notesSlide1.xml  notesSlide10.xml  notesSlide11.xml  notesSlide12.xml  notesSlide2.xml  notesSlide4.xml  notesSlide6.xml
code/ISAM2 Presentation/ppt/slideLayouts/: slideLayout4.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
code/ISAM2 Presentation/ppt/slides/: slide10.xml  slide11.xml  slide12.xml  slide13.xml  slide14.xml  slide15.xml  slide16.xml  slide19.xml  slide2.xml  slide23.xml  slide26.xml  slide29.xml  slide30.xml  slide32.xml  slide33.xml  slide34.xml  slide35.xml  slide36.xml  slide39.xml  slide40.xml  slide41.xml  slide5.xml  (+6 more)
include/vi_slam_ros/: cam_state.h  feature.hpp  image_processor.h  image_processor_nodelet.h  math_utils.hpp  utils.h
src/: image_processor.cpp  image_processor_nodelet.cpp  isam2_imu.cpp  isam2_vio.cpp  isam2_vio_imu.cpp  isam2_vio_zedpose.cpp  utils.cpp
test/: feature_initialization_test.cpp  math_utils_test.cpp
(+62 files in other folders)
